--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "nonebot-plugin-twitter"
-version = "0.0.7"
+version = "0.1.0"
 description = "NoneBot2 plugin for twitter"
 authors = [
     {name = "nek0us", email = "nekouss@gmail.com"},
 ]
 license = {text = "MIT"}
-dependencies = ["nonebot2>=2.0.0", "nonebot-adapter-onebot>=2.1.3", "httpx>=0.23.0", "tweepy>=4.14.0" ,"nonebot_plugin_apscheduler>=0.2.0"]
+dependencies = ["nonebot2>=2.0.0", "nonebot-adapter-onebot>=2.1.3", "httpx>=0.23.0", "nonebot_plugin_apscheduler>=0.2.0"]
 requires-python = ">=3.8"
 readme = "README.md"
 
