--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "nonebot-plugin-twitter"
-version = "0.1.17"
+version = "0.2.0"
 description = "NoneBot2 plugin for twitter"
 authors = [
     {name = "nek0us", email = "nekouss@gmail.com"},
 ]
 license = {text = "MIT"}
-dependencies = ["nonebot2>=2.0.0", "nonebot-adapter-onebot>=2.1.3", "httpx>=0.23.0", "httpx[http2]>=0.25.0", "nonebot_plugin_apscheduler>=0.2.0", "beautifulsoup4>=4.11.1", "nonebot_plugin_sendmsg_by_bots>=0.0.4"]
+dependencies = ["nonebot2>=2.0.0", "nonebot-adapter-onebot>=2.1.3", "httpx>=0.23.0", "httpx[http2]>=0.25.0", "nonebot_plugin_apscheduler>=0.2.0", "beautifulsoup4>=4.11.1", "nonebot_plugin_sendmsg_by_bots>=0.0.4","playwright"]
 requires-python = ">=3.8"
 readme = "README.md"
 
